--- a/Master/assets/css/styles.css
+++ b/Master/assets/css/styles.css
@@ -4,7 +4,7 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
   /* Visual */
-  background-image: url("../imgs/ignasi_pattern_s.png");
+  background-image: url("../imgs/bgrd.png");
 }
 
 html {
@@ -20,37 +20,44 @@ main {
   margin: 80px 0;
 }
 
+.navbar-inverse {
+  background-color: #003300;
+}
 /* create styles for use for all white main boxes */
 .block {
   background-color: #fff;
-
   padding: 30px;
   margin-bottom: 30px;
+}
+.block p{
+  display:inline;
 }
 
 .block-header {
   /* Typography */
-  color: #4aaaa5;
+  color: #F5A470;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-weight: bold;
+  display: inline;
 }
 
 /* NAV START */
 #logo {
   font-family: Georgia, Times, "Times New Roman", serif;
-
+  background-color: #00A7E3;
   /* Typography */
   font-size: 24px;
   font-weight: bold;
   color: #fff;
 
   /* Visual */
-  background: #4aaaa5;
+  background: #F5A470;
 }
 
 /* override bootstrap hover color and border */
 .navbar-default .navbar-nav > li > a:hover {
-  color: #4aaaa5;
+  color: #00A7E3;
+  ;
 }
 
 .navbar {
@@ -61,7 +68,8 @@ main {
 /* media query for nav background color change */
 @media only screen and (max-width: 767px) {
   .navbar-header {
-    background-color: #4aaaa5;
+  color: #F5A470;
+    background-color: #F5A470;
   }
 }
 /* END NAV */
@@ -79,10 +87,10 @@ main {
   height: 55px;
 }
 
-#images {
+img {
   /* Box-model */
   padding-top: 15px;
-
+  display: inline;
   /* Typography */
   text-align: center;
 }
@@ -117,7 +125,7 @@ main {
   padding-top: 3px;
 
   /* Visual */
-  background-color: #4aaaa5;
+  background-color: #F5A470;
 }
 /* END FOOTER */
 /* --- END STYLES FOR ALL PAGES --- */
@@ -132,7 +140,7 @@ main {
   /* Typography */
   font-size: 32px;
   font-weight: bold;
-  color: #4aaaa5;
+  color: ##00A7E3;
 }
 
 #about-image {
@@ -173,7 +181,7 @@ main {
   color: #fff;
 
   /* Visual */
-  background-color: #4aaaa5;
+  background-color: #00A7E3;
   border: 0;
 }
 
